Fix Dark mode

--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,8 @@ body.dark-mode {
 
 .dark-mode-switch label {
   display: inline-block;
-  width: 41px;
-  height: 21px;
+  width: 45px;
+  height: 25px;
   background-color: #ccc;
   border-radius: 20px;
   position: relative;
@@ -101,17 +101,17 @@ body.dark-mode {
 .dark-mode-switch label:after {
   content: "";
   position: absolute;
-  width: 16px;
-  height: 16px;
+  width: 19px;
+  height: 19px;
   border-radius: 50%;
   background-color: #fff;
-  top: 2px;
+  top: 3px;
   left: 2px;
   transition: transform 0.3s ease;
 }
 
 .dark-mode-switch input[type="checkbox"]:checked + label {
-  background-color: #333;
+  background-color: #bae67e;
 }
 
 .dark-mode-switch input[type="checkbox"]:checked + label:after {
@@ -127,21 +127,12 @@ body.dark-mode {
 
 .dark-mode-toggle label {
   display: inline-block;
-  width: 40px;
+  width: 80px;
   height: 20px;
   background-color: #ccc;
   border-radius: 20px;
   position: relative;
   cursor: pointer;
-}
-
-.dark-mode-toggle i {
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  color: #333;
-  font-size: 14px;
-  transition: transform 0.3s ease;
 }
 
 .dark-mode-toggle input[type="checkbox"]:checked + label {
